--- a/index.html
+++ b/index.html
@@ -270,7 +270,11 @@
               <h3>Social Links</h3>
 
               <ul>
-                <li><a href="">LinkedIn</a></li>
+                <li>
+                  <a href="www.linkedin.com/in/bikash-wagle-4923a9184"
+                    >LinkedIn</a
+                  >
+                </li>
                 <li><a href="">Facebook</a></li>
                 <li><a href="">Github</a></li>
                 <li><a href="">Youtube</a></li>
