--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                   >
                 </li>
                 <li><a href="">Facebook</a></li>
-                <li><a href="">Github</a></li>
+                <li><a href="https://github.com/WagleLogan">Github</a></li>
                 <li><a href="">Youtube</a></li>
               </ul>
             </div>
