--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <input type="checkbox" id="darkMode" />
     <div class="wrapper">
-      <!-- dark mode chekbox  -->
+      <!-- dark mode checkbox  -->
       <label for="darkMode" class="dark-mode-toggle">
         <i class="fa-solid fa-circle-half-stroke"></i>
       </label>
