--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <div class="tag">Interest</div>
               <div class="flex">
                 <span>Coding</span>
-                <span>Footbal</span>
+                <span>Football</span>
                 <span>Movie</span>
               </div>
             </div>
@@ -218,7 +218,7 @@
 
       <section class="container contact" id="contact">
         <h2 class="title">
-          <span> Get Intouch </span>
+          <span> Get Ontouch </span>
         </h2>
 
         <div class="social flex">
