change pdf files

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p>I love coding and teach others what i know</p>
 
             <div>
-              <a href="./assets/Bikash Wagle-resume.pdf" download="">
+              <a href="./assets/Bikash Wagle.pdf" download="">
                 <button>
                   Download CV <i class="fa-solid fa-download"></i>
                 </button>
