change cv to cl

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div>
               <a href="./assets/Bikash Wagle.pdf" download="">
                 <button>
-                  Download CV <i class="fa-solid fa-download"></i>
+                  Download Cl <i class="fa-solid fa-download"></i>
                 </button>
               </a>
             </div>
