--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
             <p>I love coding and teach others what i know</p>
 
             <div>
-              <a href="./assets/Bikash Wagle.pdf" download="">
+              <a href="./assets/Bikash Wagle-resume (1).pdf" download="">
                 <button>
-                  Download Cl <i class="fa-solid fa-download"></i>
+                  Download Resume <i class="fa-solid fa-download"></i>
                 </button>
               </a>
             </div>
             <div>
-              <a href="./assets/Bikash Wagle-CL.pdf" download="">
+              <a href="./assets/Bikash Wagle (4).pdf" download="">
                 <button>
                   Download CL <i class="fa-solid fa-download"></i>
                 </button>
